<resources>
    <string name="app_name" translatable="false">Relaxing Wake up</string>
    <string name="banner_ad_unit_id"  translatable="false">ca-app-pub-0425880096341147/5222174677</string>

    <string name="action_about">About</string>
    <string name="cancel">Cancel</string>
    <string name="preference_alarms_file" translatable="false">com.fkoteam.wakeup.ALARM_PREFERENCES</string>
    <string name="title_activity_alarm_fired">Alarm...</string>
    <string name="snoozing_time" >Snoozing Time</string>
    <string name="five_minutes">5 minutes</string>
    <string name="snooze">Snooze</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="hour_hint">When...</string>
    <string name="repeat">Repeat:</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="classical">Classical\nMusic</string>
    <string name="nature_sounds">Nature\nSounds</string>
    <string name="accept">Accept</string>
    <string name="version" translatable="false">Ver.</string>
    <string name="about_mess1">All contents are hosted on Archive.org.\nDonate to help this non-profit</string>
    <string name="url_donate" translatable="false">https://archive.org/donate/</string>
    <string name="close">Close</string>
    <string name="plural">s</string>
    <string name="minute">minute</string>
    <string name="wrong_hour">Wrong hour</string>
    <string name="title">Relaxing Wake up</string>
    <string name="confirm_delete_title">Confirm</string>
    <string name="alarm_enabled">Alarm enabled</string>
    <string name="snoozed">snoozed</string>
    <string name="add_alarm">Add an alarm</string>
    <string name="alarm_disabled">Alarm disabled</string>
    <string name="confirm_delete">Delete alarm at</string>
    <string name="empty">Press the bottom button to add an alarm</string>
    <string name="connectionProblems">Due to connection problems, a default sound will be played</string>
    <string name="textVibrate">Vibration</string>
    <string name="textInternet">Online Mode</string>
    <string name="modifyAlarm">Change Alarm</string>
    <string name="host" translatable="false">http://fkoteam.github.io/</string>
    <string name="question_update">Update to new version?</string>
    <string name="confirm_update_title">Update app</string>
    <string name="internet_warning">Stream extra melodies from internet, if available. Wifi recommended</string>
    <string name="no_repeat"> </string>
    <string name="alarm_at">Alarm at</string>


</resources>
