<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">
        >

            <TextView
                android:id="@+id/version_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/version" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_mess1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_donate"
            android:autoLink="web"/>
        <Button
            android:id="@+id/closePopupAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />
        </LinearLayout>
</LinearLayout>