<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="#d4dadb"
        android:elevation="8dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAddModifyAlarm"
                android:text="@string/add_alarm"
                />



                <EditText
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/hour_hint"
                    android:textAlignment="center"
                    android:layout_gravity="center"

                    />



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:stretchColumns="0,1">
                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:layout_marginTop = "-5dp"/>


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:id="@+id/checkMon"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop = "-5dp"
                       />

                </TableRow>
                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:id="@+id/checkTue"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop = "-7dp"
                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:id="@+id/checkWed"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop = "-7dp"
                        />

</TableRow>
                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:id="@+id/checkThu"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop = "-7dp"
                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:id="@+id/checkFri"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop = "-7dp"
                        />

                </TableRow>

<TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/checkSat"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop = "-7dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/checkSun"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop = "-7dp"
        />
</TableRow>


                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textVibrate"
                        android:textColor="#000000"
                        android:layout_marginTop = "-5dp"
                        />

                    <include layout="@layout/vibrate_question"/>

                </TableRow>
                <TableRow android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textInternet"
                        android:textColor="#000000"
                        android:layout_marginTop = "-5dp"

                        />

                    <include layout="@layout/internet_question"
                        />
                </TableRow>

            </TableLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop = "-5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classical"
                    android:textSize="12dp"
                    android:layout_margin="5dp"
                    android:textColor="#000000"
                    android:id="@+id/txtClassical"
                    />
                <SeekBar
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_gravity="center_vertical"
                    android:max="1"
                    android:layout_margin="5dp"
                    android:padding="7dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nature_sounds"
                    android:textSize="12dp"
                    android:layout_margin="5dp"
                    android:id="@+id/txtNatural"
                    android:textColor="#909090" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop = "-5dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal">
            <Button
                android:id="@+id/dismiss"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop = "-5dp"
                />
            <Button
                android:id="@+id/accept"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_marginTop = "-5dp"
                />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>